[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
robotframework = "^7.1.1"
robotframework-seleniumlibrary = "^6.6.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
